Fixed paragraph alignments and changed lists positions

--- a/CV_desktop.css
+++ b/CV_desktop.css
@@ -55,10 +55,13 @@ body {
 }
 
 main {
+    text-align: justify;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto;
     grid-gap:50px 0px;
+    margin-right: 50px;
+    margin-left: 50px;
 }
 
 h2 {
@@ -70,10 +73,14 @@ p {
 }
 
 .skills ul li {
+    text-align: center;
+    list-style: none;
     font-size: 25px;
 }
 
 .interests ul li {
+    text-align: center;
+    list-style: none;
     font-size: 25px;
 }
 
